# phoenix

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  PROMPT-gba-mp3-visualizer.txt  README.md  RELEASING.md  STATUS.md  STRUCTURE.md
.github/workflows/: ci.yml  release.yml
cmake/: caps_select.cmake  gba.toolchain.cmake  mingw.toolchain.cmake  phoenix-config.cmake.in  phx_module.cmake  psp.toolchain.cmake
docs/: 00-architecture.md  01-core.md  02-platform-layer.md  03-rendering.md  04-ecs.md  05-memory.md  06-resources.md  07-build-system.md  08-tooling.md  09-roadmap.md  10-gameplay-systems.md  graphics-engine.md
docs/diagrams/: uml-and-sequences.md
engine/anim/: CMakeLists.txt
engine/anim/include/phx/anim/: anim.h
engine/anim/src/: anim.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/phx/audio/: command_queue.h  mixer.h  stream.h
engine/audio/src/: mixer.cpp  stream.cpp
engine/core/: CMakeLists.txt
engine/core/include/phx/core/: assert.h  caps.h  config.h  crc32.h  fixed.h  hot.h  log.h  math.h  pixel.h  profile.h  time.h  types.h  version.h
engine/core/src/: assert.cpp  fixed.cpp  log.cpp
engine/ecs/: CMakeLists.txt
engine/ecs/include/phx/ecs/: world.h
engine/ecs/src/: world.cpp
engine/input/: CMakeLists.txt
engine/input/include/phx/input/: input.h
engine/memory/: CMakeLists.txt
engine/memory/include/phx/memory/: allocators.h  memory_root.h
engine/memory/src/: memory_root.cpp
engine/physics/: CMakeLists.txt
engine/physics/include/phx/physics/: physics.h
engine/physics/src/: physics.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/phx/platform/: gfx_soft.h  platform.h
engine/platform/src/gba/: gba_platform.cpp
engine/platform/src/null/: null_platform.cpp
engine/platform/src/psp/: psp_platform.cpp
engine/platform/src/sdl/: sdl_platform.cpp
engine/render/: CMakeLists.txt
engine/render/include/phx/render/: renderer.h  texture_cache.h
engine/render/src/: backend.h  renderer.cpp  texture_cache.cpp
engine/render/src/gba/: gba_ppu.cpp  ppu_model.h
engine/render/src/gl/: gl_backend.cpp
engine/render/src/gu/: gu_backend.cpp  gu_model.h
engine/render/src/soft/: soft_renderer.cpp
engine/resource/: CMakeLists.txt
engine/resource/include/phx/resource/: bundle.h  cache.h  lz.h
engine/resource/src/: cache.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/include/phx/runtime/: app.h
engine/runtime/src/: app.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/phx/scene/: scene.h
engine/scene/src/: scene.cpp
engine/ui/: CMakeLists.txt
engine/ui/include/phx/ui/: ui.h
engine/ui/src/: ui.cpp
examples/emberwing/: CMakeLists.txt  README.md
examples/emberwing/src/: art.h  audio_gen.h  bake.h  bake_main.cpp  desktop_main.cpp  game.h  gba_main.cpp  gba_ppu_main.cpp  level.h  main.cpp  psp_main.cpp  scenes.cpp  systems.cpp
examples/gba_audio/: main.cpp
examples/gba_ppu/: main.cpp
examples/gba_save/: main.cpp
examples/gba_smoke/: main.cpp
examples/miracle-player/: CMakeLists.txt  README.md
examples/miracle-player/src/: bake.h  bake_main.cpp  desktop_main.cpp  gba_ppu_main.cpp  main.cpp  miracle.cpp  particles.h  player.h  viz.h
examples/platformer/: CMakeLists.txt
examples/platformer/src/: bake.h  bake_main.cpp  components.h  gba_main.cpp  gba_ppu_main.cpp  main.cpp  psp_main.cpp  systems.cpp
examples/psp_audio/: main.cpp
examples/psp_gu/: main.cpp
examples/psp_save/: main.cpp
examples/psp_smoke/: main.cpp
tests/: CMakeLists.txt  README.md  audio_test.cpp  emberwing_test.cpp  gu_test.cpp  main.cpp  phx_test.h  physics_test.cpp  pipeline_test.cpp  platformer_test.cpp  playable_test.cpp  png_test.cpp  ppu_test.cpp  render_test.cpp  run_tools.cmake  scene_test.cpp  smoke_app.cpp  sprite_test.cpp  test_audio.cpp  test_cmdqueue.cpp  test_ecs.cpp  test_input.cpp  test_json.cpp  test_lz.cpp  test_memory.cpp  test_physics.cpp  test_png.cpp  test_scene.cpp  test_stream.cpp  test_time.cpp  test_ui.cpp  test_wav.cpp  texcache_test.cpp  tiled_test.cpp  ui_test.cpp  window_verify.cpp
tests/fixtures/: png_fixtures.h
tests/suites/: anim_test.cpp  emberwing_test.cpp  gu_test.cpp  miracle_test.cpp  pipeline_test.cpp  platformer_test.cpp  png_test.cpp  ppu_test.cpp  render_test.cpp  resource_test.cpp  smoke_app.cpp  sprite_test.cpp  tiled_test.cpp
tests/unit/: test_anim.cpp  test_fixed.cpp  test_input.cpp  test_math.cpp  test_particles.cpp  test_physics.cpp  test_png.cpp  test_stream.cpp  test_version.cpp  test_viz.cpp
tests/verify/: audio_device_verify.cpp
tools/common/: bin2s.py  debug_font.h  depcheck.py  doxyfilter.py  instructions.md  size_gate.py
tools/phxbin/: CMakeLists.txt  instructions.md  main.cpp
tools/phxentity/: editor.h  instructions.md  main.cpp
tools/phxpack/: CMakeLists.txt  builders.h  bundle_reader.h  bundle_writer.h  inflate.h  instructions.md  json.h  lock.h  lz_encode.h  main.cpp  png.h  tex_encode.h  tiled.h  wav.h
tools/phxsnd/: CMakeLists.txt  instructions.md  main.cpp
tools/phxsprite/: CMakeLists.txt  instructions.md  main.cpp
tools/phxtile/: CMakeLists.txt  instructions.md  main.cpp
tools/phxtmap/: editor.h  instructions.md  main.cpp
tools/phxviz/: CMakeLists.txt  analyze.h  instructions.md  main.cpp
